...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Profile"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/profile_spinner"
                android:layout_toEndOf="@id/profile"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_height="match_parent"
                android:background="@color/toolbar"
                android:text="@string/add_profiles" />
...
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_schedule_days"
                android:text="@string/sunday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/sunday"
                android:layout_alignBaseline="@id/sunday"
                android:text="@string/monday"/>
            <android.support.v7.widget.AppCompatCheckBox
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/monday"
                android:layout_alignBaseline="@id/monday"
                android:text="@string/tuesday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tuesday"
                android:layout_alignBaseline="@id/tuesday"
                android:text="@string/wednesday"/>
            <android.support.v7.widget.AppCompatCheckBox
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/wednesday"
                android:layout_alignBaseline="@id/wednesday"
                android:text="@string/thursday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/thursday"
                android:layout_alignBaseline="@id/thursday"
                android:text="@string/friday"/>
            <android.support.v7.widget.AppCompatCheckBox
...
                android:layout_toEndOf="@+id/friday"
                android:layout_alignBaseline="@id/friday"
                android:text="@string/saturday"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/start_time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <TextView
...
                android:text="@string/start_time"
                android:textSize="18sp"
                android:paddingRight="@dimen/fab_margin"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/start_time_button"
                android:layout_below="@id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/toolbar"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <TextView
...
                android:layout_toEndOf="@id/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mins"
                android:inputType="number"/>
            <EditText
                android:id="@+id/hours_field"
                android:layout_below="@id/hours"
                android:layout_alignLeft="@id/hours"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"/>
            <EditText
                android:id="@+id/mins_field"
                android:layout_below="@id/mins"
                android:layout_alignLeft="@id/mins"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"/>

        </RelativeLayout>

        <Button
            android:id="@+id/add_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/duration_layout"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary_color"
            android:text="@string/add_profiles"
...
