...
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose apps to block. Tap on an app to remove." />

    <EditText
        android:id="@+id/profileName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        tools:text="Profile Name" />

    <Button
        android:id="@+id/chooseAppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:text="Add Apps" />

    <ListView
        android:id="@+id/createProfileListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/submitProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:text="Done" />


</LinearLayout>
