...
    android:background="#fff"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/schedule_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@android:color/background_dark"/>

        <ImageButton
            android:id="@+id/edit_schedule_name_button"
            android:layout_width="@dimen/edit_schedule_name_button"
            android:layout_height="@dimen/edit_schedule_name_button"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/fab_margin"
            android:padding="@dimen/small_padding"
...
            android:text="Tap a scheduled profile to edit it"
            android:textAlignment="center"/>
    </RelativeLayout>


    <com.alamkanak.weekview.WeekView
        android:id="@+id/weekView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        app:eventTextColor="@android:color/white"
        app:textSize="12sp"
        app:hourHeight="60dp"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin">

        <ImageButton
            android:id="@+id/delete_schedule_button"
            android:layout_width="@dimen/standard_button"
            android:layout_height="@dimen/standard_button"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_delete_forever_black_24dp"
            android:background="@color/white"/>

        <ImageButton
            android:id="@+id/add_profile_button"
            android:layout_width="@dimen/standard_button"
            android:layout_height="@dimen/standard_button"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_add_black_24dp"
            android:background="@color/white"/>
    </RelativeLayout>
...
